--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "mongoose-int32": "^0.6.0",
+    "multer": "^1.4.5-lts.1",
     "radix-ui": "^1.0.1"
   }
 }
