--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Build and Deploy Node App
 
 on:
-  #workflow_dispatch: {}
-  push:
-    branches: [ main ]
-  pull_request:
+  workflow_dispatch: {}
+  # push:
+  #   branches: [ main ]
+  # pull_request:
 
 env:
   applicationfolder: ./
